Use Spring Authorization Server for JWTs
* Configure application also as an authorization server meaning all the JWT creation and signing is no longer our code but done by Spring Authorization Server
* Support single public client (frontend) using auth code flow with PKCE
* Switch signing algorithm to RS256
